Correct finding of tests