@@ -56,18 +56,22 @@ do
 		
 		raw_line=$(grep -E "Failed tests|Tests in error" -A 1 $runfolder/before_"$BUG".txt)
 		echo "line: $raw_line"
-		test=$(echo "$raw_line" | grep -oE '\([^)]+\)' | head -n 1 | tr -d '()' | xargs)
+		test=$(echo "$raw_line" | grep -oE '\([^)]+\)' | grep "Test" | head -n 1 | tr -d '()' | xargs)
 		if [ -z $test ]; then
 			test=$(cat $runfolder/before_"$BUG".txt | grep "Failed tests\|Tests in error" -A 1 | tail -n 1 | grep -v "(" | awk -F'.' '{print $1}' | xargs)
 		fi
 		if [ -z $test ]; then
-			test=$(cat $runfolder/before_"$BUG".txt | grep "Failed tests\|Tests in error" -A 1 | tail -n 1 | grep "(" | awk -F'[()]' '{print $2}' | xargs)
+			test=$(cat $runfolder/before_"$BUG".txt | grep "Failed tests\|Tests in error" -A 1 | tail -n 1 | grep "(" | grep ")" | awk -F'[()]' '{print $2}' | xargs)
 		fi
 		if [ -z "$test" ]; then
 			maven_line=$(grep -E "^\[ERROR\] Failures:" -A 1 $runfolder/before_"$BUG".txt | tail -n 1)
+			echo "maven_line=$maven_line"
 			if [ ! -z "$maven_line" ]; then
         			test=$(echo "$maven_line" | sed 's/\[ERROR\]//g' | awk -F'.' '{print $1}' | xargs)
 			fi
+		fi
+		if [ -z "$test" ]; then
+			test=$(echo "$raw_line" | tail -n 1 | awk -F':' '{print $1}' | awk -F'.' '{print $1}' | tr -d " ")
 		fi
 		
 		echo "Test: $test"
@@ -79,7 +83,7 @@ do
 			echo "Getting tree for $test in $BUG"
 			sed -i '/<dependencies>/a <dependency><groupId>org.slf4j</groupId><artifactId>slf4j-simple</artifactId><version>2.0.18</version><scope>test</scope></dependency>' $PROJECTFOLDER/pom.xml
 			if ! xmlstarlet sel -t -v "//*[local-name()='plugin']/*[local-name()='artifactId']='maven-surefire-plugin'" "$PROJECTFOLDER/pom.xml" | grep -q "true"; then
-				NEW_PLUGIN="<plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-surefire-plugin</artifactId><configuration><argLine>-javaagent:$(pwd)/kieker-2.0.2-bytebuddy.jar</argLine></configuration></plugin>"
+				NEW_PLUGIN="<plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-surefire-plugin</artifactId><configuration><argLine>-javaagent:$(pwd)/kieker-2.0.2-bytebuddy.jar --add-opens=java.base/java.lang=ALL-UNNAMED</argLine></configuration></plugin>"
 				sed -i "/<plugins>/a $NEW_PLUGIN" "$PROJECTFOLDER/pom.xml"
 			else
 				xmlstarlet ed -L \
@@ -87,7 +91,7 @@ do
 					-t elem -n "configuration" -v ""   \
 					-s "//*[local-name()='plugin'][*[local-name()='artifactId']='maven-surefire-plugin']/*[local-name()='configuration'][not(*[local-name()='argLine'])]" \
 					-t elem -n "argLine" \
-					-v "-javaagent:"$(pwd)"/kieker-2.0.2-bytebuddy.jar" \
+					-v "-javaagent:"$(pwd)"/kieker-2.0.2-bytebuddy.jar --add-opens=java.base/java.lang=ALL-UNNAMED" \
 					$PROJECTFOLDER/pom.xml
 			fi
 			echo "KIEKER_SIGNATURES_INCLUDE: $KIEKER_SIGNATURES_INCLUDE"
